[package]
name = "docx-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = "4.5.42"
docx-handlebars = "0.2.4"
docx-rs = "0.4.18"
serde = "1.0.219"
serde_json = "1.0.142"
bytes = "1.10.1"
rustls = { version = "0.23.31", default-features = false, features = ["ring", "std"] }
ureq = "3.0.12"
gluesql = "0.17.0"
async-trait = "0.1.88"
