[package]
name = "docx-tool"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = "4.5.42"
docx-handlebars = "0.2.4"
docx-rs = "0.4.18"
serde = "1.0.219"
serde_json = "1.0.142"
bytes = "1.10.1"
rustls = { version = "0.23.31", default-features = false, features = [
    "ring",
    "std",
] }
ureq = "3.0.12"
gluesql = {version="0.17.0", default-features = false}
futures = "0.3.31"
sha2 = "0.10.9"
hex = "0.4.3"
async-std = {version="1.13.1", default-features = false,features = ["attributes", "std"] }
async-trait = "0.1.88"
